--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Hike.jpg" />
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>My Portfolio</title>
   </head>
-  <body class="bg-gray-900 font-inter">
+  <body class="font-inter antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
