--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>My Portfolio</title>
-    <script type="module" crossorigin src="./index-Dhl1q8Jy.js"></script>
+    <script type="module" crossorigin src="./index-BisTFFHm.js"></script>
     <link rel="stylesheet" crossorigin href="./index.css">
   </head>
   <body class="font-inter antialiased">
